# flash_rag

./: .gitignore  pyproject.toml  run_app.sh  test_flashrag.py
flashrag/: COLLECTIONS.txt  hyperparams.py  main.py  prompts.py  utils.py
