[project]
name = "flash-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.7",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]
